--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://vivyankonjera/my-portfolio.github.io",
+    "homepage": "https://vivyankonjera.github.io/my-portfolio",
     "name": "my-portfolio",
     "version": "0.1.0",
     "private": true,
